force-app/main/default/objects/Log__e/fields/num_Line__c.field-meta.xml
<CustomField>
    <fullName>num_Line__c</fullName>
    <label>Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>