force-app/main/default/objects/Log__e/fields/txl_Data__c.field-meta.xml
<CustomField>
    <fullName>txl_Data__c</fullName>
    <defaultValue>&quot;{}&quot;</defaultValue>
    <label>Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>