force-app/main/default/objects/Log__e/fields/txl_Message__c.field-meta.xml
<CustomField>
    <fullName>txl_Message__c</fullName>
    <label>Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>