force-app/main/default/objects/Log__e/fields/txt_Class__c.field-meta.xml
<CustomField>
    <fullName>txt_Class__c</fullName>
    <label>Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>