force-app/main/default/objects/Log__e/fields/txt_Context__c.field-meta.xml
<CustomField>
    <fullName>txt_Context__c</fullName>
    <label>Context</label>
    <length>80</length>
    <type>Text</type>
</CustomField>