force-app/main/default/objects/Log__e/fields/txt_User__c.field-meta.xml
<CustomField>
    <fullName>txt_User__c</fullName>
    <label>User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>